--- a/index.css
+++ b/index.css
@@ -16,10 +16,9 @@ body {
   align-items: center;
 }
 .toggle-button {
-  width: 40em;
-  height: 14em;
+  width: 20em;
+  height: 7em;
   box-shadow: 0.15em 0.15em 0.45em 0.2em #ffffffee;
-  font-size: 0.5em;
   position: relative;
   overflow: hidden;
   isolation: isolate;
@@ -66,8 +65,8 @@ body {
   background-color: #2e83bf;
 }
 .satallite {
-  width: 12em;
-  height: 12em;
+  width: 5.5em;
+  height: 5.5em;
   position: absolute;
   top: 1em;
   left: 5%;
@@ -134,8 +133,8 @@ body {
   rotate: 60deg;
 }
 .dot {
-  width: 2em;
-  height: 2em;
+  width: 18%;
+  height: 18%;
   background-color: #9da8bc;
   position: absolute;
   border-radius: 50%;
@@ -202,11 +201,11 @@ body {
   top: -100%;
 }
 .star {
-  width: 2.5em;
-  height: 2.5em;
+  width: 1.25em;
+  height: 1.25em;
   background-color: #f8fcff;
   -webkit-clip-path: polygon(50% 0, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0 50%, 35% 35%);
-clip-path: polygon(50% 0, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0 50%, 35% 35%);
+  clip-path: polygon(50% 0, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0 50%, 35% 35%);
   position: absolute;
 }
 .star1 {
@@ -286,42 +285,42 @@ clip-path: polygon(50% 0, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0 50%, 
   right: -10%;
 }
 .cloud {
-  width: 6.5em;
-  height: 6.5em;
+  width: 3.25em;
+  height: 3.25em;
   background-color: #f5faff;
   position: absolute;
-  bottom: -3em;
+  bottom: -24%;
   scale: 1;
   border-radius: 50%;
 }
 .cloud2 {
-  bottom: -2.8em;
-  left: 5.5em;
+  bottom: -20%;
+  left: 14%;
   scale: 1.3;
 }
 .cloud3 {
-  bottom: -1.4em;
-  left: 11em;
+  bottom: -15%;
+  left: 27.5%;
   scale: 1.3;
 }
 .cloud4 {
-  bottom: -1em;
-  left: 16.5em;
+  bottom: -12%;
+  left: 40%;
   scale: 0.9;
 }
 .cloud5 {
-  bottom: -0.5em;
-  left: 21em;
+  bottom: -7.5%;
+  left: 52.5%;
   scale: 1.1;
 }
 .cloud6 {
-  bottom: 0.5em;
-  left: 27em;
+  bottom: 0%;
+  left: 67.5%;
   scale: 1.3;
 }
 .cloud7 {
-  bottom: 5em;
-  left: 32em;
+  bottom: 25%;
+  left: 80%;
   scale: 1.55;
 }
 .cloudset1 {
@@ -332,20 +331,20 @@ clip-path: polygon(50% 0, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0 50%, 
   right: -6%;
   rotate: -5deg;
 }
-.cloudset2 .cloud2 {
-  bottom: -2em;
-  left: 6em;
-}
-.cloudset2 .cloud3 {
-  bottom: -0.4em;
-  left: 12em;
-}
-.cloudset2 .cloud5 {
-  bottom: 0.8em;
-}
-.cloudset2 .cloud6 {
-  bottom: 1em;
-}
 .cloudset2 .cloud {
   background-color: #a7cbea;
+}
+.cloudset2 .cloud2 {
+  bottom: -18%;
+  left: 15%;
+}
+.cloudset2 .cloud3 {
+  bottom: -7.5%;
+  left: 29%;
+}
+.cloudset2 .cloud5 {
+  bottom: -1%;
+}
+.cloudset2 .cloud6 {
+  bottom: 4%;
 }
