--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
 .toggle-button {
   width: 20em;
   height: 7em;
-  box-shadow: 0.15em 0.15em 0.45em 0.2em #ffffffee;
+  box-shadow: 0.075em 0.075em 0.225em 0.1em #ffffffee;
   position: relative;
   overflow: hidden;
   isolation: isolate;
@@ -30,7 +30,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: transparent;
-  box-shadow: inset 0.3em 0.3em 1em 0.1em #000000bb;
+  box-shadow: inset 0.15em 0.15em 0.5em 0.05em #000000bb;
   position: absolute;
   z-index: 1;
   border-radius: 12em;
@@ -65,10 +65,10 @@ body {
   background-color: #2e83bf;
 }
 .satallite {
-  width: 5.5em;
-  height: 5.5em;
+  width: 6em;
+  height: 6em;
   position: absolute;
-  top: 1em;
+  top: 7.5%;
   left: 5%;
   border-radius: 50%;
   isolation: isolate;
@@ -87,11 +87,11 @@ body {
   height: 100%;
   background-color: transparent;
   box-shadow:
-    inset 0.2em 0.2em 0.3em #ffffff88,
-    -0.2em -0.2em 0.3em #ffffff88,
-    inset -0.2em -0.2em 0.3em #00000066,
-    0.2em 0.2em 0.3em #00000066,
-    0.15em 0.15em 1em 0.4em #00000039;
+    inset 0.1em 0.1em 0.15em #ffffff88,
+    -0.1em -0.1em 0.15em #ffffff88,
+    inset -0.1em -0.1em 0.15em #00000066,
+    0.1em 0.1em 0.15em #00000066,
+    0.075em 0.075em 0.5em 0.2em #00000039;
   position: absolute;
   top: 0;
   left: 0;
@@ -112,25 +112,25 @@ body {
   height: 100%;
   background-color: #cccfd9;
   box-shadow:
-    inset 0.2em 0.2em 0.3em #ffffff88,
-    -0.2em -0.2em 0.3em #ffffff88,
-    inset -0.2em -0.2em 0.3em #00000066,
-    0.2em 0.2em 0.3em #00000066,
-    0.15em 0.15em 1em 0.4em #00000039;
+    inset 0.1em 0.1em 0.15em #ffffff88,
+    -0.1em -0.1em 0.15em #ffffff88,
+    inset -0.1em -0.1em 0.15em #00000066,
+    0.1em 0.1em 0.15em #00000066,
+    0.075em 0.075em 0.5em 0.2em #00000039;
   position: absolute;
   top: 0;
   left: 100%;
-  rotate: 60deg;
+  transform: rotate(60deg);
   border-radius: 50%;
   transition: var(--transition);
 }
 #dark:target ~ .content .moon {
   left: 0%;
-  rotate: 0deg;
+  transform: rotate(0deg);
 }
 #light:target ~ .content .moon {
   left: 100%;
-  rotate: 60deg;
+  transform: rotate(60deg);
 }
 .dot {
   width: 18%;
@@ -146,12 +146,12 @@ body {
 .dot2 {
   top: 50%;
   left: 25%;
-  scale: 2;
+  transform: scale(2);
 }
 .dot3 {
   top: 60%;
   left: 62%;
-  scale: 1.2;
+  transform: scale(1.2);
 }
 .rays {
   width: 100%;
@@ -159,33 +159,33 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  scale: 1;
+  transform: scale(1);
   transition: var(--transition);
 }
 #dark:target ~ .content .rays {
-  scale: 0.85;
+  transform: scale(0.85);
 }
 #light:target ~ .content .rays {
-  scale: 1;
+  transform: scale(1);
 }
 .ray {
   width: 100%;
   height: 100%;
   background-color: #ffffff1a;
-  backdrop-filter: blur(0.01em);
+  backdrop-filter: blur(0.0075em);
   position: absolute;
   top: 0;
   left: 0;
   border-radius: 50%;
 }
 .ray1 {
-  scale: 2;
+  transform: scale(2);
 }
 .ray2 {
-  scale: 2.9;
+  transform: scale(2.9);
 }
 .ray3 {
-  scale: 3.8;
+  transform: scale(3.8);
 }
 .stars {
   width: 70%;
@@ -215,52 +215,52 @@ body {
 .star2 {
   top: 30%;
   left: 10%;
-  scale: 0.4;
+  transform: scale(0.4);
 }
 .star3 {
   top: 35%;
   left: 60%;
-  scale: 0.3;
+  transform: scale(0.3);
 }
 .star4 {
   top: 25%;
   left: 77.5%;
-  scale: 1.1;
+  transform: scale(1.1);
 }
 .star5 {
   top: 45%;
   left: 27.5%;
-  scale: 0.3;
+  transform: scale(0.3);
 }
 .star6 {
   top: 50%;
   left: 58.5%;
-  scale: 0.2;
+  transform: scale(0.2);
 }
 .star7 {
   top: 55%;
   left: 77.5%;
-  scale: 0.3;
+  transform: scale(0.3);
 }
 .star8 {
   top: 65%;
   left: 18%;
-  scale: 0.2;
+  transform: scale(0.2);
 }
 .star9 {
   top: 72.5%;
   left: 15%;
-  scale: 0.2;
+  transform: scale(0.2);
 }
 .star10 {
   top: 80%;
   left: 30%;
-  scale: 0.24;
+  transform: scale(0.24);
 }
 .star11 {
   top: 75%;
   left: 62.5%;
-  scale: 0.5;
+  transform: scale(0.5);
 }
 .clouds {
   width: 100%;
@@ -290,38 +290,38 @@ body {
   background-color: #f5faff;
   position: absolute;
   bottom: -24%;
-  scale: 1;
+  transform: scale(1);
   border-radius: 50%;
 }
 .cloud2 {
   bottom: -20%;
   left: 14%;
-  scale: 1.3;
+  transform: scale(1.3);
 }
 .cloud3 {
   bottom: -15%;
   left: 27.5%;
-  scale: 1.3;
+  transform: scale(1.3);
 }
 .cloud4 {
   bottom: -12%;
   left: 40%;
-  scale: 0.9;
+  transform: scale(0.9);
 }
 .cloud5 {
   bottom: -7.5%;
   left: 52.5%;
-  scale: 1.1;
+  transform: scale(1.1);
 }
 .cloud6 {
   bottom: 0%;
   left: 67.5%;
-  scale: 1.3;
+  transform: scale(1.3);
 }
 .cloud7 {
   bottom: 25%;
   left: 80%;
-  scale: 1.55;
+  transform: scale(1.55);
 }
 .cloudset1 {
   z-index: 1;
@@ -329,7 +329,7 @@ body {
 .cloudset2 {
   bottom: 0%;
   right: -6%;
-  rotate: -5deg;
+  transform: rotate(-5deg);
 }
 .cloudset2 .cloud {
   background-color: #a7cbea;
